--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "e2e": "ng e2e",
     "build-demo": "ng build --prod --base-href=/angular-gridster2/",
     "build-npm": "ng build angular-gridster2 --prod",
-    "deploy-demo": "ngh --dir=dist/demo --repo=https://GH_TOKEN@github.com/tiberiuzuld/angular-gridster2.git --name='Tiberiu Zuld' --email=tiberiuzuld@gmail.com"
+    "deploy-demo": "ngh --dir=dist/demo --repo=https://GH_TOKEN@github.com/tiberiuzuld/angular-gridster2.git --name='Tiberiu Zuld' --email=tiberiuzuld@gmail.com",
+    "install": "npm run build-npm"
   },
   "homepage": "https://tiberiuzuld.github.io/angular-gridster2",
   "bugs": {
